# first_attempt_tech_task

./: .gitignore  README.md  pyproject.toml
first_attempt_tech_task/: main.ipynb  pd_dataset_utils.py  pytorch_attempt.py
