[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "first_attempt_tech_task"
version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["first_attempt_tech_task"]

[tool.hatch.build]
include = [
    "first_attempt_tech_task/**/*.py",
    "first_attempt_tech_task/dataset/**/*.csv",  # Include CSV files from dataset directory
]
